--- a/estilo.css
+++ b/estilo.css
@@ -2,8 +2,20 @@
 	background-color: #000000;
 	border-style: solid;
 	border-color: #888888;
+	padding-left: 0;
+	padding-right: 0;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
 }
 
+button {
+	padding-left: 0;
+	padding-right: 0;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
 body{
 	background-color: gray;
 }
