--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 #tela{
-	background-color: #000000;
+	background-color: #303030;
 	border-style: solid;
-	border-color: #888888;
+	border-color: #FAFAFA;
 	padding-left: 0;
 	padding-right: 0;
 	margin-right: auto;
@@ -11,7 +11,7 @@
 
 
 body{
-	background-color: gray;
+	background-color: black;
 }
 
 audio{
@@ -20,6 +20,7 @@ audio{
 
 
 #panel{
+	color: #FAFAFA;
 	padding-left: 0;
 	padding-right: 0;
 	margin-right: auto;
@@ -31,6 +32,7 @@ audio{
 }
 
 #tablePanel{
+	color: #FAFAFA;
 	padding-left: 7%;
 	padding-right: 3%;
 	margin-left: 30%;
@@ -41,3 +43,10 @@ audio{
 	display: block;
 }
 
+table{
+	color: #FAFAFA;
+}
+ 
+ th{
+	border-bottom: 1px solid #FAFAFA;
+ }
