--- a/estilo.css
+++ b/estilo.css
@@ -1,15 +1,3 @@
-#tela{
-	background-color: #303030;
-	border-style: solid;
-	border-color: #FAFAFA;
-	padding-left: 0;
-	padding-right: 0;
-	margin-right: auto;
-	margin-left: auto;
-	display: block;
-}
-
-
 body{
 	background-color: black;
 }
@@ -17,7 +5,6 @@ body{
 audio{
 	visibility: hidden; 
 }
-
 
 #panel{
 	color: #FAFAFA;
@@ -46,7 +33,25 @@ audio{
 table{
 	color: #FAFAFA;
 }
- 
- th{
+
+th{
 	border-bottom: 1px solid #FAFAFA;
- }
+}
+
+#tela{
+	background-color: #303030;
+	border-style: solid;
+	border-color: #FAFAFA;
+	padding-left: 0;
+	padding-right: 0;
+	margin-right: auto;
+	margin-left: auto;
+	display: block;
+}
+
+input {
+	background-color: black;
+	font: white;
+	width: 80px;
+	border: 0;
+}
