--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 body{
-	background-color: black;
+	background-image: url("Resources/gif.gif");
+	background-size: fill;
 }
 
 audio{
@@ -7,31 +8,28 @@ audio{
 }
 
 #panel{
-	color: #FAFAFA;
+	color: white;
 	padding-left: 0;
 	padding-right: 0;
 	margin-right: auto;
 	margin-left: auto;
 	display: block;
 	text-align: center;
-	border: solid;
-	border-width: 3px;
+	padding-bottom: 4%;
 }
 
 #tablePanel{
-	color: #FAFAFA;
+	color: white;
 	padding-left: 7%;
 	padding-right: 3%;
 	margin-left: 30%;
 	margin-right: 31%;
 	margin-bottom: 5px;
-	border: solid;
-	border-width: 3px;
 	display: block;
 }
 
 table{
-	color: #FAFAFA;
+	color: white;
 }
 
 th{
@@ -39,7 +37,8 @@ th{
 }
 
 #tela{
-	background-color: #303030;
+	/*background-image: url("Resources/snake.jpg");*/
+	background-color: #c3c3c3c3;
 	border-style: solid;
 	border-color: #FAFAFA;
 	padding-left: 0;
@@ -50,8 +49,13 @@ th{
 }
 
 input {
-	background-color: black;
-	font: white;
+	font: black;
+	color: black;
 	width: 80px;
 	border: 0;
+}
+
+#footer{
+	text-align: center;
+	color: white;
 }
