--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,28 @@
+@font-face {
+  font-family: 'ArcadeI';
+  src: url('Resources/fonts/ARCADE_I.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ArcadeN';
+  src: url('Resources/fonts/ARCADE_N.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ArcadeR';
+  src: url('Resources/fonts/ARCADE_R.TTF') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+h2, h3, h5{
+	font-family: 'ArcadeI';
+}
+
 body{
 	background-image: url("Resources/gif.gif");
 	background-size: fill;
@@ -5,6 +30,20 @@ body{
 
 audio{
 	visibility: hidden; 
+}
+
+#tutorial{
+	height:80px;
+}
+
+p{
+	font-family: 'ArcadeR';
+	font-size: 12px;
+	display: inline;
+}
+
+img{
+	width: 120px;
 }
 
 #panel{
@@ -15,25 +54,7 @@ audio{
 	margin-left: auto;
 	display: block;
 	text-align: center;
-	padding-bottom: 4%;
-}
-
-#tablePanel{
-	color: white;
-	padding-left: 7%;
-	padding-right: 3%;
-	margin-left: 30%;
-	margin-right: 31%;
-	margin-bottom: 5px;
-	display: block;
-}
-
-table{
-	color: white;
-}
-
-th{
-	border-bottom: 1px solid #FAFAFA;
+	position: relative;
 }
 
 #tela{
@@ -48,14 +69,42 @@ th{
 	display: block;
 }
 
-input {
-	font: black;
-	color: black;
+label, input {
+	background: none;
+	color: white;
 	width: 80px;
 	border: 0;
+	font-family: 'ArcadeR';
+}
+
+input{
+	font-size: 18px;
+}
+
+button {
+	font-family: 'ArcadeR';
+  display: inline-block;
+  padding: 5px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;	
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+	background-color: #4CAF50;
+	/* background-color: none; */
+  border: none;
+  border-radius: 15px;
+}
+
+p{
+	margin: 0;
 }
 
 #footer{
+	font-size: 12px;
+	font-family: 'ArcadeR';
 	text-align: center;
 	color: white;
 }
+
